# app/Http/Controllers/Api/AuthController.php
@@ -6,6 +6,7 @@ use App\Models\User;
 use Illuminate\Http\Request;
 use App\Http\Controllers\Controller;
 use Illuminate\Support\Facades\Hash;
+use App\Http\Requests\RegisterRequest;
 use Illuminate\Validation\ValidationException;
 
 /**
@@ -22,12 +23,8 @@ class AuthController extends Controller
      * 
      * @unauthenticated
      */
-    public function register(Request $request){
-        $request->validate([
-            'name' => 'required|string|max:255',
-            'email' => 'required|string|email|max:255|unique:users',
-            'password' => 'required|string|min:8|confirmed',
-        ]);
+    public function register(RegisterRequest $request){
+        $request->validated();
 
         $user = User::create([
             'name' => $request->name,
